--- a/client/public/locales/en/common.json
+++ b/client/public/locales/en/common.json
@@ -1,7 +1,7 @@
 {
   "sidebar_home": "Home",
   "sidebar_chat": "Chat",
-  "sidebar_notify": "Notify",
+  "sidebar_post": "Post",
   "sidebar_rule": "Rule",
   "sidebar_annotation": "Annotation",
   "sidebar_user_group": "Users",
